--- a/ExploreGrocerySalesData.ipynb
+++ b/ExploreGrocerySalesData.ipynb
@@ -2177,13 +2177,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(unit_sales=7.0),\n",
+       " Row(unit_sales=1.0),\n",
+       " Row(unit_sales=2.0),\n",
+       " Row(unit_sales=1.0),\n",
+       " Row(unit_sales=1.0),\n",
+       " Row(unit_sales=3.0),\n",
+       " Row(unit_sales=1.0),\n",
+       " Row(unit_sales=1.0),\n",
+       " Row(unit_sales=13.0),\n",
+       " Row(unit_sales=3.0)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unit_sales_2013_m1[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f88b5225690>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYQAAAD8CAYAAAB3u9PLAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAIABJREFUeJzt3Xt03OV95/H3d0aXkWVk2boYYxls\nsENiyN0lbNM0FwpxmovpBlpn04azyx5227Jnd7vbPaQ9oV02OT00PaUXaFNa0xASggkEEMEpoSFp\nEiDENpiLDcbyBVuWLEu+6uKRNJrv/jHPjEZj2RobWbL1fF7nzJnf75nn99PvEWK+fu7m7oiIiCSm\n+wFEROTsoIAgIiKAAoKIiAQKCCIiAiggiIhIoIAgIiKAAoKIiAQKCCIiAiggiIhIUDHdD3AqGhsb\nffHixdP9GCIi55SNGzf2uHvTRPnOqYCwePFiNmzYMN2PISJyTjGzN8vJpyYjEREBFBBERCRQQBAR\nEUABQUREAgUEEREBFBBERCRQQBAREUABQUREAgWE4MBgD7e89L/oGeye7kcREZkWCghBz2APvZle\negZ7pvtRRESmhQJCkCULgId3EZHYKCAEWc+OeRcRiU1ZAcHMVprZVjNrM7Nbxvm82szWhs+fN7PF\nIf0KM9sUXi+Z2W+Ue8+plq8ZZN2n+UlERKbHhAHBzJLAXcAngOXA58xseUm2G4FD7r4UuAO4PaS/\nCqxw9/cAK4F/MLOKMu85pQo1BDUZiUikyqkhXAG0ufsOdx8CHgBWleRZBdwbjh8CrjIzc/cBd8+E\n9BSQ/+d3OfecUvmagavJSEQiVU5AWAjsKTpvD2nj5gkB4AjQAGBmHzCzzcArwH8Nn5dzzymVrxmo\nhiAisSonINg4aaUN7SfM4+7Pu/tlwC8BXzSzVJn3zN3Y7CYz22BmG7q7z9wcAVensohErpyA0A4s\nKjpvATpOlMfMKoA5wMHiDO7+GtAPXF7mPfPX3e3uK9x9RVPThDvAnbasOpVFJHLlBIT1wDIzW2Jm\nVcBqoLUkTytwQzi+Dnja3T1cUwFgZhcBlwK7yrznlMrXDDQPQURiNeGeyu6eMbObgSeBJHCPu282\ns9uADe7eCqwB7jOzNnI1g9Xh8l8BbjGzYSAL/J679wCMd89JLtspydcM1GQkIrGaMCAAuPs6YF1J\n2q1Fx2ng+nGuuw+4r9x7TidXp7KIRE4zlQPNVBaR2CkgBIW1jNSpLCKRUkAINFNZRGKngBC4OpVF\nJHIKCIFmKotI7BQQgsI8BNUQRCRSCgiBlr8WkdgpIATqVBaR2CkgBJqpLCKxU0AItKeyiMROASHQ\nsFMRiZ0CQjBaQ1CnsojESQEh0AY5IhI7BYRAG+SISOwUEAJtkCMisVNACDTsVERip4AQaIMcEYmd\nAkKgDXJEJHYKCIE2yBGR2CkgBFrLSERip4AQaKayiMROASHQBjkiEjsFhEAb5IhI7BQQgtGZygoI\nIhInBYSgsJaRFrcTkUiVFRDMbKWZbTWzNjO7ZZzPq81sbfj8eTNbHNKvNrONZvZKeP9Y0TU/Dvfc\nFF7Nk1Wo06F5CCISu4qJMphZErgLuBpoB9abWau7bynKdiNwyN2Xmtlq4Hbgt4Ae4NPu3mFmlwNP\nAguLrvu8u2+YpLK8JfmagdYyEpFYlVNDuAJoc/cd7j4EPACsKsmzCrg3HD8EXGVm5u4vuntHSN8M\npMysejIefLKphiAisSsnICwE9hSdtzP2X/lj8rh7BjgCNJTk+SzworsPFqX9c2gu+pKZ2Xg/3Mxu\nMrMNZrahu7u7jMc9Pa5OZRGJXDkBYbwv6tKe15PmMbPLyDUj/Zeizz/v7u8EPhRevzPeD3f3u919\nhbuvaGpqKuNxT09WncoiErlyAkI7sKjovAXoOFEeM6sA5gAHw3kL8AjwBXffnr/A3feG917gfnJN\nU9NG8xBEJHblBIT1wDIzW2JmVcBqoLUkTytwQzi+Dnja3d3M6oEngC+6+zP5zGZWYWaN4bgS+BTw\n6lsryluTrxmoyUhEYjVhQAh9AjeTGyH0GvCgu282s9vM7DMh2xqgwczagD8A8kNTbwaWAl8qGV5a\nDTxpZi8Dm4C9wD9OZsFOlWtxOxGJ3ITDTgHcfR2wriTt1qLjNHD9ONd9GfjyCW77/vIf88zTKCMR\niZ1mKgda3E5EYqeAEKiGICKxU0AIPD9TWTumiUikFBAC7ZgmIrFTQAhG91RWQBCROCkgBFr+WkRi\np4AQqFNZRGKngBAUZiqrD0FEIqWAEGgtIxGJnQJCoOWvRSR2CgiBlr8WkdgpIARZz09MUw1BROKk\ngBBoLSMRiZ0CQuAadioikVNACAozldWHICKRUkAI8n0IqiGISKwUEAINOxWR2CkgBIWJaWoyEpFI\nKSCQ2wOhsB8Crj0RRCRKCgiM1goS4dehoaciEiMFBEabi5KWHHMuIhITBQRGawSJEBBcNQQRiZAC\nAsU1hNBkpD4EEYmQAgKjNYKEmoxEJGJlBQQzW2lmW82szcxuGefzajNbGz5/3swWh/SrzWyjmb0S\n3j9WdM37Q3qbmf2NmdlkFepU5WsEhT4ENRmJSIQmDAhmlgTuAj4BLAc+Z2bLS7LdCBxy96XAHcDt\nIb0H+LS7vxO4Abiv6Jq/B24CloXXyrdQjrektMlIK56KSIzKqSFcAbS5+w53HwIeAFaV5FkF3BuO\nHwKuMjNz9xfdvSOkbwZSoTaxAKhz9+c8N+j/G8C1b7k0p6m0U1k1BBGJUTkBYSGwp+i8PaSNm8fd\nM8ARoKEkz2eBF919MORvn+CeUyZfI0iS70NQp7KIxKeijDzjte2XfmOeNI+ZXUauGemaU7hn/tqb\nyDUtceGFF070rKelMDGtMMpINQQRiU85NYR2YFHReQvQcaI8ZlYBzAEOhvMW4BHgC+6+vSh/ywT3\nBMDd73b3Fe6+oqmpqYzHPXWlE9M0D0FEYlROQFgPLDOzJWZWBawGWkvytJLrNAa4Dnja3d3M6oEn\ngC+6+zP5zO7eCfSa2ZVhdNEXgMfeYllO22gfgmoIIhKvCQNC6BO4GXgSeA140N03m9ltZvaZkG0N\n0GBmbcAfAPmhqTcDS4Evmdmm8GoOn/0u8E9AG7Ad+P5kFepU5fsMRmcqqw9BROJTTh8C7r4OWFeS\ndmvRcRq4fpzrvgx8+QT33ABcfioPe6b4cTOVVUMQkfhopjKjTUaamCYiMVNAYLRGkNCwUxGJmAIC\nxTUEzVQWkXgpIEBhhzTNVBaRmCkgoA1yRERAAQE4vslINQQRiZECAkWdyvl5CKohiEiEFBAYXapi\ntMlIo4xEJD4KCBTXENRkJCLxUkBgnB3T1GQkIhFSQKCoUxmtdioi8VJAYLQTOaEagohETAGBcYad\nqlNZRCKkgMDxw07VqSwiMVJA4PhOZc1DEJEYKSBQPA9Bw05FJF4KCIzTZKQagohESAGBcTbIUaey\niERIAYHjZyprHoKIxEgBgdH9EJKoyUhE4qWAwGiTkdYyEpGYKSBQVENQp7KIREwBgeIaQn4egjqV\nRSQ+CgiMs4WmmoxEJEJlBQQzW2lmW82szcxuGefzajNbGz5/3swWh/QGM/uRmfWZ2Z0l1/w43HNT\neDVPRoFOx/FrGSkgiEh8KibKYGZJ4C7gaqAdWG9mre6+pSjbjcAhd19qZquB24HfAtLAl4DLw6vU\n5919w1ssw1tWutqpoyYjEYlPOTWEK4A2d9/h7kPAA8CqkjyrgHvD8UPAVWZm7t7v7j8jFxjOWtog\nR0SkvICwENhTdN4e0sbN4+4Z4AjQUMa9/zk0F33JzKyM/GdEoVMZTUwTkXiVExDG+6IubVMpJ0+p\nz7v7O4EPhdfvjPvDzW4ysw1mtqG7u3vChz0dx+2prBqCiESonIDQDiwqOm8BOk6Ux8wqgDnAwZPd\n1N33hvde4H5yTVPj5bvb3Ve4+4qmpqYyHvfUeenENA07FZEIlRMQ1gPLzGyJmVUBq4HWkjytwA3h\n+DrgaT/JYH4zqzCzxnBcCXwKePVUH36yZD2LhUpOgoSGnYpIlCYcZeTuGTO7GXgSSAL3uPtmM7sN\n2ODurcAa4D4zayNXM1idv97MdgF1QJWZXQtcA7wJPBmCQRL4V+AfJ7VkpyDrXqgdmJk2yBGRKE0Y\nEADcfR2wriTt1qLjNHD9Ca5dfILbvr+8RzzzsqiGICKimcrk5iEU1xDUqSwiMVJAYGwNwUioU1lE\noqSAQL5TOferSJhpHoKIREkBgXyncr6GoCYjEYmTAgK5eQiFJiNTp7KIxEkBgdBkFDqVE6ohiEik\nFBAo7VQ2bZAjIlFSQCBXQyj0IajJSEQipYBAbsvMwigjNRmJSKQUEAhNRoUagqmGICJRUkAgNBkV\nTUzTWkYiEiMFBPLDTrV0hYjETQGB/LDT3HECI6s9lUUkQgoIjF26IreWkWoIIhIfBQTA8aKZylrL\nSETipIBAvslIaxmJSNwUEIAsPjrKSJ3KIhIpBQRyG+SMrmWUUKeyiERJAYF8p3JRH4JqCCISIQUE\nSmYqo5nKIhInBQTyM5U17FRE4qaAwNgaQsK0/LWIxEkBgZI+BDUZiUikFBDILX9daDIyNRmJSJwU\nEFCnsogIlBkQzGylmW01szYzu2Wcz6vNbG34/HkzWxzSG8zsR2bWZ2Z3llzzfjN7JVzzN5b/Rp4G\nxU1GCQ07FZFITRgQzCwJ3AV8AlgOfM7MlpdkuxE45O5LgTuA20N6GvgS8L/HufXfAzcBy8Jr5ekU\nYDLkagj5UUaaqSwicSqnhnAF0ObuO9x9CHgAWFWSZxVwbzh+CLjKzMzd+939Z+QCQ4GZLQDq3P05\nzw3p+QZw7VspyFvhJRvkaKayiMSonICwENhTdN4e0sbN4+4Z4AjQMME92ye4JwBmdpOZbTCzDd3d\n3WU87qnLFi1dobWMRCRW5QSE8dr2S/8JXU6e08rv7ne7+wp3X9HU1HSSW56+bNHy1wm0/LWIxKmc\ngNAOLCo6bwE6TpTHzCqAOcDBCe7ZMsE9p0zWsyTyo4w07FREIlVOQFgPLDOzJWZWBawGWkvytAI3\nhOPrgKf9JNN93b0T6DWzK8Pooi8Aj53y00+SMXsqY2Q1U1lEIlQxUQZ3z5jZzcCTQBK4x903m9lt\nwAZ3bwXWAPeZWRu5msHq/PVmtguoA6rM7FrgGnffAvwu8HWgBvh+eE2L0mGnmocgIjGaMCAAuPs6\nYF1J2q1Fx2ng+hNcu/gE6RuAy8t90DMp6z7aZERC8xBEJEqaqUxJk5FqCCISKQUExu6pnFAfgohE\nSgGBMFO5aGKahp2KSIwUEMitdlpY3E4T00QkUgoI5GoIiaJhp45rkxwRiU70ASFfGxgddpr7lbjW\nMxKRyEQfEPL9BcX7IQBqNhKR6EQfEPIjioqHnQIaeioi0Yk+IORrCInCsNPcr0Q1BBGJTfQBYbSG\nMDrKCNDQUxGJjgJCvlO5sGNavoagTmURiYsCQr7JqGg/BFCTkYjEJ/qA4F4yyqjQZKQagojEJfqA\nkK8hjO6HoE5lEYmTAkLoK0ioU1lEIqeAUNJkpD4EEYlV9AHBS5uMwmgjTUwTkdhEHxDyNYHEcUtX\nqFNZROKigEDp4nahD0FNRiISGQWE/ExlG13+GtRkJCLxiT4geMny1xp2KiKxij4gZEsWt9NqpyIS\nKwUEL52Ylu9DUKeyiMRFAeG4TmU1GYlInMoKCGa20sy2mlmbmd0yzufVZrY2fP68mS0u+uyLIX2r\nmX28KH2Xmb1iZpvMbMNkFOZ05GsCCXUqi0jkKibKYGZJ4C7gaqAdWG9mre6+pSjbjcAhd19qZquB\n24HfMrPlwGrgMuAC4F/N7G3uPhKu+6i790xieU5Z6Z7KhT4E1RBEJDLl1BCuANrcfYe7DwEPAKtK\n8qwC7g3HDwFXWe6bdRXwgLsPuvtOoC3cb1qNeIY/eeWPeOHQxtEmo5Id07SWkYjEppyAsBDYU3Te\nHtLGzePuGeAI0DDBtQ78wMw2mtlNp/7op68v00fPUA/tA7uPryFoLSMRidSETUYQviHHKh2Cc6I8\nJ7v2g+7eYWbNwFNm9rq7/+S4H54LFjcBXHjhhWU87sT6MwOFd2f8/RC0dIWIxKacGkI7sKjovAXo\nOFEeM6sA5gAHT3atu+ff9wOPcIKmJHe/291XuPuKpqamMh53YgOZ/tz7SP/oWkbhV5F/V6eyiMSm\nnICwHlhmZkvMrIpcJ3FrSZ5W4IZwfB3wtOeG77QCq8MopCXAMuAXZlZrZucBmFktcA3w6lsvTnn6\nR0JAyPSPLl1Ruh+CmoxEJDITNhm5e8bMbgaeBJLAPe6+2cxuAza4eyuwBrjPzNrI1QxWh2s3m9mD\nwBYgA/y+u4+Y2XzgkfDlWwHc7+7/cgbKN658DaE/01/UqXz8sNO+TC/b+9p4d/17p+rRRESmTTl9\nCLj7OmBdSdqtRcdp4PoTXPsV4CslaTuAd5/qw06WfA2hf6S/UBMY3TFtdGLasz3P8Nje7/LVd9/B\nrIra6XlYEZEpEuVM5UIfQqafLPnVTkt3THOODh8B4Gjm6DQ8pYjI1IoyIORHGaWzaTLZDFC8Y9ro\nnsq9mV4A+ob7puEpRUSmVpQBYSA0GQH0Z3Jf9qM7po02GfUN5wJCr2oIIhKBOANCZjQg9IVaQGFx\nu6JO5UINIaMagojMfFEGhP5Mf2G+Qf7LvjDKqKhTuXc4VzPoDTUFEZGZLM6AMNJPXeUc4PgaQvHS\nFflgkc8jIjKTRRkQBjL91FfVA9Cb70Mo7IeQex8YGZ2j0KuAICIRiC4gjHiGdDZNfWUuIBRqCIWJ\nabn3o8OjHcmqIYhIDKILCAOZYwDU5QPCcEmTUagh5OcgVFploS9BRGQmiy8ghCGnNckaqhMpBkZy\ncxISJRPTjoSAMK+6odCsJCIyk0UREIayQ4WRQv1hyGkqmSKVTOH5mcqMHWWUbzJqqGqgP9On/RFE\nZMaLIiB8ZfOf8tCetcBoDSGVSJFKVBfyFPZDYGyT0byqBhwfM5lNRGQmiiIgNKaa6RrcB4ytIVQn\nU4U8iZJhp+lsmupENbMrZgOjy1cMZAY4Mnx4yp5dRGSqRBEQmqub2Z/uwt0ZCOsY5ZuM8vJNRQkb\n/ZXMSs6ipmIWMLp8xYN7vs2db/z1VD26iMiUiSYgDGYHOZo5Wlj6uipRTSpRFBBKaggAqWQNNcl8\nQMjVEN7s30VnuoOh7NBUPb6IyJSIIiA0pZoB2J/uYiDTTyqRImEJUsmaQp7SYaeQqyHMCgGhb7iX\n4ewwPYPdOE5Xet8UlkBE5MyLIiA0V88HYP9gF/0j/YWmonwfgmFjAkE+ONRU1BTy9mZ62Z/uKsxe\n7jxWuq20iMi5LYqAMLdqLklLFmoI1aGpKN9kVNxMBKP9CDXJWSQtSSpRQ1+ml870aBAoPhYRmWxt\nfdvYn+6a0p8ZRUBIWIL6yrnsT3fRnxmtIeTfi2sHUFRDCM1FNRU19GZ66TzWgWHMqayn81hnIf+z\nPT/jjd6tU1EUEYlA1rN8re1OvhOGy0+VKAICQH1VPV2hyai6JCAkSn4N+RrCrNDHMCtZQ+9wL53p\nTuqr5tJU3VxoMhrKDrJ29/08vvfRqSqKiMxw7cf2cGzkGNv7tjHimSn7ufEEhMq59Ax20zfcV2gq\nKjQZTVBDSCVn5ZqMju1lXlUDDVUNHBjqYSg7yLbebWQ8w67+nRwLy2CIiJyK9Eh6zL4r+RaHwewg\nuwd2T9lzRBMQ5lbNY8RHSGePjdOpPPbXkD+vqcjVEGqSNRweOkT3YDcNVQ00VOdmL+9L7+P1o1uA\n3A5rW4++DsBwdpg1O+5mZ/+OKSmbiJzbvr5zDV99/c8KS+Rs632D2mRtOJ665uiIAsLcwnFpH0LC\nSjuVc+f5IaezkrNIZ9M4TkN1A/OqGoHcSKMtRzfTUrOIqkQVr4Xg8OKhjbxwaAPrOr435r5D2cEz\nUDIROZekR9K09W4rnB8eOsSrR17mwFAPW3tfZ8RHaOt9gyWzL6GhqnFK+yejCQj1lccHhKQlqUxU\nHTfKKH+en6dQUzRfYV5VI/VV9SRI8NrRLexLd7Kk9mJaahax5ehm3J2fdP8YgNeObqZnsAeATYde\n4A83/c9C0Mgbzg5PbkFF5Kzh7uw71om7F9K+vfub3PHGVwtB4RcHf47jVCaqeK7nGdoH9pDOpmmp\naWFhTQvb+9qmrB+hrIBgZivNbKuZtZnZLeN8Xm1ma8Pnz5vZ4qLPvhjSt5rZx8u952TLL3cNFN4h\n149gVtJkZAlSiRRJSwIwKyxfYVhhCOvcqnm8cGgDABfWXsRFtYs5OHSAFw+/wM7+Hby3/v0A/Kz7\nJwxlh3i4/UEynuGhPWsZ8REAHtqzlj96+Q/HTHLrPNbBrv6dZ+i3ICKTpfhLHnIjg37a/W90D+4v\npD29/1/5f1v+hB92PQXAnoHdbDj4CwAe3fsw7s6zPc+wsKaF5XXLeenwi7x0+EUAWmYtomXWIoay\nQ7zZ/+aUlGnCgGBmSeAu4BPAcuBzZra8JNuNwCF3XwrcAdwerl0OrAYuA1YCf2dmyTLvOanMrLBt\nZvEaRqlkqrCwXSEvVuhQhtHO5XwwAJgX+iRqk7NpqGrkwlmLAXjgzW9SYRVc0fABltRezLMHfsYP\n9n2fg0MHeU/9+9iX7uSZ7p+y8eB6frT/hwyMDPBP2/+BoewgO/t38NXX/4y/3PrnvHrkZQB6Brv5\n6ut/xrfe/EahNtGX6eN7Ha3sGdhTeMah7BA7+rYXgg3k/kDVTCVycn2Z3jFf7n2ZXt7o3Vpoz3d3\nnj/wHE90PF74f7BnsJuvbPm//O0bdzCQ6cfd+c6eB3hg97f4q61/wcGhA+wZ2M1je79LhVXQ2vEI\nuwfe5LG93yWVSPErjb/Kzv4dPLL3YboH97O87jKW111OxjP8sOsp5lXNo7ZiNi2zWgCmrNmooow8\nVwBt7r4DwMweAFYBxW0fq4A/DccPAXdabujOKuABdx8EdppZW7gfZdxz0s2tnEtXet+YgFCdSDE4\nkh6TL2FW6FCG0YAwr6qhkDavugH6crWDfLCZU1nPkeHDvKPuMlLJGt5V/x4e3fsw3+98gktmL+VX\nmz5Cz2A3j3c8yoiPsCB1ASvmXcHjHY+yZsfdtPW2kUrWUJ2o5h+3f41PXbCKp/b9C0M+zK7+nXQe\n6+DDzR/lu3u+w9HMUZ7sXMcnL/g0TdXzeaT9IQ4NH2RB6gI+u+g3OTJ8mH/pXMfBoQNc2fDLfKz5\n19je18a/df8Id+dDTR/mnfXv4pXDL7Px0HrmVNbz7xp/mfNTF7Dp8AtsPfoai2ZdyPvmriBpFbx6\n5CX2HtvL0tnLuGzOO+nL9LLl6Gb6hntZdt6lXDJ7KV3pfWzrfQMM3jb7UuanzmfPsd282b+L2RWz\nuWT2MmZXzObN/l10pPfSVN3M4tolgLO7fzeHhg6yoOYCWma10J8ZoH1gN+lsmoU1i5ifaubQ0CH2\nHmsnQZKFsxYyp3IO3elu9qU7qa2oZUHNQqoSVXSl93FgsIe5VfM4P7WALFn2pTvpG+6lqbqZplQT\nA5ljdKX3MezDzE/Np75yLkeGj7A/3UXSksxPzWdWRS0Hhw7QM9hDbbKWplQzFVZBz2A3h4cPUV85\nl8bqJkZ8hO7B/fRn+mmsbmReVQMDIwN0p/eT8QxN1c3UVdZxdPgI3YP7qUhU0lw9n1QyxcGhAxwY\nPEBtxWyaqptIWpLuwW6ODB9mbuVcGqobyXiG7vR+Bkb6aaxuZl7VPPozfXQNdpH1LM3V86mrrOPQ\n0CG6B7uoSlTTnJpPTTJF92A3PYPdnFdRx/zU+RhGV3ofh4cP0VDVSHNqPoPZQTqPdTAwMsD5qfNp\nrG7iyPBhOo514O5cUHMB9VX17E/vp+NYBzXJGhbOWkhNsoa9A3vZl97HvKp5LJq1iCzOnoE36Rns\nYUHNBSyquZC+TB87+7czkBngotrFLKi5gK50Fzv62gC4ZPZSmqqb2dm/g+19bdRV1vG2897OrOQs\nXu/dws6+nSysWcjyOZcxlB3i5cOb6DzWybLz3sZlc97JvnQnGw+upy/Ty7vr38ulde9gy5HNPH/g\nOSoTFVzZ8EEuqr2IZ3p+ys97nmN+aj4fnf9r1FbU8kRHK2/0bmVJ7cV88oLP0J3ez+MdjzIwMsCi\nmgtZ1fIb/Kz7p2w6/AKQa/q9+vyVPNy+luFshq70Pv7i9dt5e91yftL9Y95Rt5wdfdv52zfuAIya\nZA3/vuU3+W77g/zdtr+lN3OUDzV+mPfMfR9bjr7KD7t+QGWiiqXnvY1Kq6SpuonuwW4W1iwqfPc0\nVjWyrXcrKxf8+pn4WhyjnICwENhTdN4OfOBEedw9Y2ZHgIaQ/vOSaxeG44nuOYmMVCJFY3UT9L5G\nfUV9Ycjp7Ipa+jO9Yxa6S1oFs5OzC2nzQv9Dc/X8QtqC6gsAWDp7WSHt4tpLePHwRlbM/SVSiRRv\nm30pcyvnciRzlKuar6EmWcPV8z/O13etIZVMce3Cz1JXWUfPYDfPHXiGuso5fO7C36YqUcW3d3+T\nR/c+zLyqBv5DyxfYn+7iic7H+frONTRVN7F6wed56fCLPN7xWOHZrmq+ho2HfsGd2/6qkLa87nJ+\nfuBZnun5aSEtYQnW7rmftXvuB6Cxuon2gXY2Hlpf+B3MqZzDq0deYV3naMd4daKanx94dsxvNkGC\np7qenIz/SCdlWGEzo1NNm8x7laZN5r2m4v6lJvNeZ0rSkmNqvpBrAn7+4HOF80qrJJVMsSk0t8Do\nyMJ7dt4N5Mpwce0ldA12cff2vwOgNlnLL839AK/3vlb4/+aiWYu59Ly38+yBZ7hz21+TsCQfafoY\njdWNfL/zCe7dtYb6yrmsvui36R/p45H2h/m37qd515x3s/L8T7L3WDtr93ybEc/wm4s+x4LUAj69\n4Foe2PMt6irquGLelVQkKvhw00d5ZO/DvP28d1BXUQfAu+a8lx/u/wFLai8ufK9cVLuYV468TCab\noSJRzlf26bPSdrDjMphdD3zc3f9zOP8d4Ap3/29FeTaHPO3hfDu5msBtwHPu/s2QvgZYR66p6qT3\nLLr3TcBN4fRS4EzWnRqBnjNiJ0TfAAAEwUlEQVR4/7PBTC/jTC8fzPwyzvTywdSX8SJ3b5ooUznh\nph1YVHTeApQu5JPP025mFcAc4OAE1050TwDc/W7g7jKe8y0zsw3uvmIqftZ0mellnOnlg5lfxple\nPjh7y1jOKKP1wDIzW2JmVeQ6iVtL8rQCN4Tj64CnPVf1aAVWh1FIS4BlwC/KvKeIiEyhCWsIoU/g\nZuBJIAnc4+6bzew2YIO7twJrgPtCp/FBcl/whHwPkusszgC/755rDBzvnpNfPBERKdeEfQgxMbOb\nQhPVjDXTyzjTywczv4wzvXxw9pZRAUFERICIlq4QEZGTU0AIpnopjcliZveY2X4ze7UobZ6ZPWVm\n28L73JBuZvY3oYwvm9n7iq65IeTfZmY3jPezpouZLTKzH5nZa2a22cz+e0ifEeU0s5SZ/cLMXgrl\n+78hfUlYCmZbWBqmKqSf8lIxZ4OwSsGLZva9cD7TyrfLzF4xs01mtiGknVt/o+4e/Ytcx/Z24GKg\nCngJWD7dz1Xms/8q8D7g1aK0PwduCce3ALeH418Hvg8YcCXwfEifB+wI73PD8dzpLltReRYA7wvH\n5wFvkFvyZEaUMzzn7HBcCTwfnvtBYHVI/xrwu+H494CvhePVwNpwvDz87VYDS8LfdHK6y1dUzj8A\n7ge+F85nWvl2AY0laefU36hqCDmF5TncfQjIL6Vx1nP3n5Ab2VVsFXBvOL4XuLYo/Rue83Og3swW\nAB8HnnL3g+5+CHiK3NpTZwV373T3F8JxL/AauRnvM6Kc4Tn7wmlleDnwMXJLwcDx5cuX+yHgKrOx\nS8W4+06geKmYaWVmLcAngX8K58YMKt9JnFN/owoIOeMtz7HwBHnPBfPdvRNyX6ZAc0g/UTnPmfKH\n5oP3kvtX9IwpZ2hO2QTsJ/clsB047F5Y97j4WccsFQMULxVzVpYP+Cvg/wDZcN7AzCof5IL4D8xs\no+VWWIBz7G/0zC6Mce6wcdJm4vCrE5XznCi/mc0GHgb+h7sfNRvvsXNZx0k7q8vpufk57zGzeuAR\n4B3jZQvv51T5zOxTwH5332hmH8knj5P1nCxfkQ+6e4eZNQNPmdnrJ8l7VpZRNYSccpbnOJd0heon\n4T2/QPuJynnWl9/MKskFg2+5+3dD8owrp7sfBn5Mrl253nJLwcDYZy2Uw8pfKmY6fRD4jJntItcc\n+zFyNYaZUj4A3L0jvO8nF9Sv4Bz7G1VAyJlpS2kULyVyA/BYUfoXwgiHK4EjoRr7JHCNmc0NoyCu\nCWlnhdB+vAZ4zd3/suijGVFOM2sKNQPMrAb4NXL9JD8itxQMHF++U1kqZlq5+xfdvcXdF5P7f+tp\nd/88M6R8AGZWa2bn5Y/J/W29yrn2NzpdPfJn24tcr/8b5Npu/3i6n+cUnvvbQCcwTO5fFzeSa2/9\nIbAtvM8LeY3cxkTbgVeAFUX3+U/kOunagP843eUqKeOvkKs2vwxsCq9fnynlBN4FvBjK9ypwa0i/\nmNwXXhvwHaA6pKfCeVv4/OKie/1xKPdW4BPTXbZxyvoRRkcZzZjyhbK8FF6b898h59rfqGYqi4gI\noCYjEREJFBBERARQQBARkUABQUREAAUEEREJFBBERARQQBARkUABQUREAPj/KBqzqknHeSMAAAAA\nSUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f88b5208490>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sns.distplot(unit_sales_2013_m1, hist=False, color=g, kde_kws={\"shade\": True})"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Distribution plot is shown only for Jan 2013 here. The plot for rest of the months and years are shown in separate code files."
    ]
   },
   {
