--- a/SelectStores.ipynb
+++ b/SelectStores.ipynb
@@ -567,14 +567,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------+\n",
+      "|count(DISTINCT item_nbr)|\n",
+      "+------------------------+\n",
+      "|                    3078|\n",
+      "+------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "sqlContext.sql(\"select count(distinct(item_nbr)) from sdfTrainTbl where date >= '2015-01-01 00:00:00' and date < '2016-01-01 00:00:00' and store_nbr = 44\").show()\n",
-    "#This is to be run--->"
+    "#There is a good number of items that are sold in store 44 in the year 2015."
    ]
   },
   {
@@ -597,7 +608,7 @@
    ],
    "source": [
     "sqlContext.sql(\"select count(*) from sdfTrainTbl where date >= '2015-01-01 00:00:00' and date < '2016-01-01 00:00:00' and store_nbr = 44\").show()\n",
-    "#2015 sales data"
+    "#There is good amount of sales data for store 44 in the year 2015."
    ]
   },
   {
@@ -669,13 +680,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Here is what can be done for further analysis:\n",
+    "Create separate file (say train44.csv) with data for store 44 for the years 2013 to 2015 from train.csv. File size will be roughly 72 MB.\n",
+    "Create separate file with data for store 44 from transactions.csv (say transactions44.csv). File size will be roughly 31 KB.\n",
+    "\n",
+    "From train44.csv the data for 2013 and 2014 can be treated as train data, covering 2 full years.\n",
+    "From train44.csv the data for 2015 can be treated as test data, to be used for prediction.\n",
+    "\n",
+    "The file test.csv given in Kaggle may not be used at all.\n"
+   ]
   }
  ],
  "metadata": {
