Removed unwanted code.

--- a/CreateSubset/CreateTrainStore44Subset.ipynb
+++ b/CreateSubset/CreateTrainStore44Subset.ipynb
@@ -24,21 +24,15 @@
     "sparkSession = SparkSession.builder.getOrCreate()\n",
     "\n",
     "from pyspark.sql.functions import col, countDistinct\n",
-    "from pyspark.sql.functions import isnan, when, count, col\n",
-    "\n",
-    "\n",
-    "import matplotlib as plot\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "%matplotlib inline\n",
-    "\n",
-    "from __future__ import division"
+    "from pyspark.sql.functions import isnan, when, count, col"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sdfTrain = sqlContext.read.csv(\"/gl-capstone-data/Team6-C-Sep/Data/train/train.csv\",header = True,inferSchema = True)"
