--- a/CreateSubset/CreateTransactionsStore44Subset.ipynb
+++ b/CreateSubset/CreateTransactionsStore44Subset.ipynb
@@ -24,15 +24,7 @@
     "sparkSession = SparkSession.builder.getOrCreate()\n",
     "\n",
     "from pyspark.sql.functions import col, countDistinct\n",
-    "from pyspark.sql.functions import isnan, when, count, col\n",
-    "\n",
-    "\n",
-    "import matplotlib as plot\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "%matplotlib inline\n",
-    "\n",
-    "from __future__ import division"
+    "from pyspark.sql.functions import isnan, when, count, col"
    ]
   },
   {
