To collect more statistics.

--- a/ExploreGrocerySalesData-Store44.ipynb
+++ b/ExploreGrocerySalesData-Store44.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "783"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "DataFrame[summary: string, type: string, locale: string, locale_name: string, description: string]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,6 +813,42 @@
    ],
    "source": [
     "sdfHolidayEvents.select(\"type\").distinct().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2012-03-02 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "minRow = sdfHolidayEvents.agg({\"date\": \"min\"}).collect()[0]\n",
+    "print minRow[\"min(date)\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015-12-31 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxRow = sdfHolidayEvents.agg({\"date\": \"max\"}).collect()[0]\n",
+    "print maxRow[\"max(date)\"]"
    ]
   },
   {
@@ -1378,7 +1414,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "item_data =sqlContext.read.csv(\"/gl-capstone-data/Team6-C-Sep/Data/items_store44_2013_2015.csv\",header = True,inferSchema = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -1389,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1991,6 +2038,42 @@
    ],
    "source": [
     "sdfTransactions.select(\"date\").distinct().show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2013-01-02 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "minRow = sdfTransactions.agg({\"date\": \"min\"}).collect()[0]\n",
+    "print minRow[\"min(date)\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015-12-31 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxRow = sdfTransactions.agg({\"date\": \"max\"}).collect()[0]\n",
+    "print maxRow[\"max(date)\"]"
    ]
   },
   {
@@ -2607,7 +2690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -2888,13 +2971,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "sqlContext.registerDataFrameAsTable(sdfTrain, \"sdfTraintbl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------+\n",
+      "|count(DISTINCT item_nbr)|\n",
+      "+------------------------+\n",
+      "|                    3104|\n",
+      "+------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sqlContext.sql(\"select count(distinct item_nbr)  from sdfTraintbl\").show()"
    ]
   },
   {
