Fixed to exclude 2012 data

--- a/CreateSubset/CreateHolidayEvents_2013-2015.ipynb
+++ b/CreateSubset/CreateHolidayEvents_2013-2015.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from pyspark import SparkContext\n",
@@ -99,7 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "sdfHolidays_events_2013_2015 = sqlContext.sql(\"select *  from sdfHolidays_eventsTbl where date < '2016-01-01 00:00:00'\")"
+    "sdfHolidays_events_2013_2015 = sqlContext.sql(\"select *  from sdfHolidays_eventsTbl where date >= '2013-01-01 00:00:00' and date < '2016-01-01 00:00:00'\")"
    ]
   },
   {
@@ -110,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "211"
+       "170"
       ]
      },
      "execution_count": 7,
@@ -131,15 +133,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------+-------+--------+-----------+--------------------+-----------+\n",
-      "|               date|   type|  locale|locale_name|         description|transferred|\n",
-      "+-------------------+-------+--------+-----------+--------------------+-----------+\n",
-      "|2012-03-02 00:00:00|Holiday|   Local|      Manta|  Fundacion de Manta|      false|\n",
-      "|2012-04-01 00:00:00|Holiday|Regional|   Cotopaxi|Provincializacion...|      false|\n",
-      "|2012-04-12 00:00:00|Holiday|   Local|     Cuenca| Fundacion de Cuenca|      false|\n",
-      "|2012-04-14 00:00:00|Holiday|   Local|   Libertad|Cantonizacion de ...|      false|\n",
-      "|2012-04-21 00:00:00|Holiday|   Local|   Riobamba|Cantonizacion de ...|      false|\n",
-      "+-------------------+-------+--------+-----------+--------------------+-----------+\n",
+      "+-------------------+--------+--------+-----------+--------------------+-----------+\n",
+      "|               date|    type|  locale|locale_name|         description|transferred|\n",
+      "+-------------------+--------+--------+-----------+--------------------+-----------+\n",
+      "|2013-01-01 00:00:00| Holiday|National|    Ecuador|  Primer dia del ano|      false|\n",
+      "|2013-01-05 00:00:00|Work Day|National|    Ecuador|Recupero puente N...|      false|\n",
+      "|2013-01-12 00:00:00|Work Day|National|    Ecuador|Recupero puente p...|      false|\n",
+      "|2013-02-11 00:00:00| Holiday|National|    Ecuador|            Carnaval|      false|\n",
+      "|2013-02-12 00:00:00| Holiday|National|    Ecuador|            Carnaval|      false|\n",
+      "+-------------------+--------+--------+-----------+--------------------+-----------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -151,10 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sdfHolidays_events_2013_2015.write.csv(\"/gl-capstone-data/Team6-C-Sep/Data/holidays_events_2013_2015.csv\", header=True)"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -173,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "211"
+       "170"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -217,22 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------+-------+--------+-----------+--------------------+-----------+\n",
-      "|               date|   type|  locale|locale_name|         description|transferred|\n",
-      "+-------------------+-------+--------+-----------+--------------------+-----------+\n",
-      "|2012-03-02 00:00:00|Holiday|   Local|      Manta|  Fundacion de Manta|      false|\n",
-      "|2012-04-01 00:00:00|Holiday|Regional|   Cotopaxi|Provincializacion...|      false|\n",
-      "|2012-04-12 00:00:00|Holiday|   Local|     Cuenca| Fundacion de Cuenca|      false|\n",
-      "|2012-04-14 00:00:00|Holiday|   Local|   Libertad|Cantonizacion de ...|      false|\n",
-      "|2012-04-21 00:00:00|Holiday|   Local|   Riobamba|Cantonizacion de ...|      false|\n",
-      "+-------------------+-------+--------+-----------+--------------------+-----------+\n",
+      "+-------------------+--------+--------+-----------+--------------------+-----------+\n",
+      "|               date|    type|  locale|locale_name|         description|transferred|\n",
+      "+-------------------+--------+--------+-----------+--------------------+-----------+\n",
+      "|2013-01-01 00:00:00| Holiday|National|    Ecuador|  Primer dia del ano|      false|\n",
+      "|2013-01-05 00:00:00|Work Day|National|    Ecuador|Recupero puente N...|      false|\n",
+      "|2013-01-12 00:00:00|Work Day|National|    Ecuador|Recupero puente p...|      false|\n",
+      "|2013-02-11 00:00:00| Holiday|National|    Ecuador|            Carnaval|      false|\n",
+      "|2013-02-12 00:00:00| Holiday|National|    Ecuador|            Carnaval|      false|\n",
+      "+-------------------+--------+--------+-----------+--------------------+-----------+\n",
       "only showing top 5 rows\n",
       "\n",
       "None\n"
