--- a/CreateSubset/CreateOil_2013-2015.ipynb
+++ b/CreateSubset/CreateOil_2013-2015.ipynb
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sdfOil = sqlContext.read.csv(\"/gl-capstone-data/Team6-C-Sep/Data/oil.csv\",header = True,inferSchema = True)"
@@ -90,10 +92,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "sdfoil_2013_2015 = sqlContext.sql(\"select *  from sdfOilTbl where date < '2016-01-01 00:00:00'\")"
+    "sdfoil_2013_2015 = sqlContext.sql(\"select * from sdfOilTbl where date < '2016-01-01 00:00:00'\")"
    ]
   },
   {
@@ -146,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sdfoil_2013_2015.write.csv(\"/gl-capstone-data/Team6-C-Sep/Data/oil_2013_2015.csv\", header=True)"
