File name upadate

--- a/GenerateData/GenerateOilData.ipynb
+++ b/GenerateData/GenerateOilData.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from datetime import timedelta"
@@ -737,7 +739,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result = pd.merge(dfDateAll,\n",
@@ -1502,10 +1506,12 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "result2.to_csv(\"oilinterpolated.csv\", index = False)"
+    "result2.to_csv(\"oil_2013_2015_interpolated.csv\", index = False)"
    ]
   },
   {
